# DareData_Project

./: .gitignore  Project Exercise.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
assignments/: ci.yml  pyproject.toml
assignments/.github/workflows/: ci.yml
assignments/life_expectancy/: cleaning.py
life_expectancy/: __init__.py  cleaning.py  loading_saving.py
life_expectancy/tests/: conftest.py  create_fixtures.py  fixture_functions.py  test_cleaning.py  test_loading.py  test_saving.py
life_expectancy/tests/fixtures/: eu_life_expectancy_expected.csv  eu_life_expectancy_raw.tsv
