[project]
name = "life_expectancy"
version = "0.1.0"
description = "Let's see what life expects"
authors = [{name = "Ana Amorete"}]
dependencies = ["pandas>=2.1.1"]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml"]

# This bit is important. It tells Python how to build your project.
# In this case, we're using setuptools, which is usually already
# included in your Python installation.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# This is also important. It tells setuptools which packages to include.
# If you don't add this, you won't be able to import your package, 
# (`import my_cool_package`) even if you install it.
[tool.setuptools]
packages = ["life_expectancy"]